# The-Socratic-Method-of-Large-Language-Models

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  celery_app.py  config.py  main.py
backend/app/api/: routes.py
backend/app/core/: database.py
backend/app/domain/: discussion.py
backend/app/eval/: README.md  datasets.py  metrics.py  runner.py
backend/app/middleware/: compliance.py
backend/app/models/: llm.py
backend/app/observability/: metrics.py
backend/app/providers/: __init__.py  anthropic_adapter.py  base.py  deepseek_adapter.py  gemini_adapter.py  kimi_adapter.py  openai_adapter.py  perplexity_adapter.py
backend/app/routers/: __init__.py  artifacts.py  topics.py
backend/app/schemas/: api.py  models.py
backend/app/services/: __init__.py  llm_router.py  notifications.py  storage.py  tools.py  validators.py
backend/app/tasks/: topics.py
backend/app/tools/finance/: adapters.py
backend/app/workers/: judges.py  reflection.py  socratic.py
backend/migrations/: 001_initial.sql
docs/operations/: launch-playbook.md  observability-and-cost-controls.md
docs/product/: iterative-enhancements-roadmap.md
frontend/: Dockerfile  README.md  package.json  tailwind.config.js  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/app/workspaces/: page.tsx
frontend/components/: ArtifactEditor.tsx  FinancialChart.tsx
infrastructure/: README.md
infrastructure/terraform/: main.tf  variables.tf
ops/prometheus/: prometheus.yml
(+3 files in other folders)
