[tool.poetry]
name = "monorepo-backend"
version = "0.1.0"
description = "FastAPI service with Celery task queue"
authors = ["Socratic Developers <dev@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.27.0" }
celery = "^5.3.6"
pydantic = "^2.6.0"

[tool.poetry.dependencies.common]
path = "../packages/common/python"
develop = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.2"
mypy = "^1.8.0"
pytest = "^8.0.0"
types-requests = "^2.31.0.20240218"

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
src = ["app"]

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
